lib/src/hiredis_bindings.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:redis_ffi/redis_ffi.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<
  ffi.Pointer<redisReader> Function(ffi.Pointer<redisReplyObjectFunctions>)
>()
external ffi.Pointer<redisReader> redisReaderCreateWithFunctions(
  ffi.Pointer<redisReplyObjectFunctions> fn,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<redisReader>)>()
external void redisReaderFree(ffi.Pointer<redisReader> r);

@ffi.Native<
  ffi.Int Function(ffi.Pointer<redisReader>, ffi.Pointer<ffi.Char>, ffi.Size)
>()
external int redisReaderFeed(
  ffi.Pointer<redisReader> r,
  ffi.Pointer<ffi.Char> buf,
  int len,
);

@ffi.Native<
  ffi.Int Function(ffi.Pointer<redisReader>, ffi.Pointer<ffi.Pointer<ffi.Void>>)
>()
external int redisReaderGetReply(
  ffi.Pointer<redisReader> r,
  ffi.Pointer<ffi.Pointer<ffi.Void>> reply,
);

@ffi.Native<sds Function(ffi.Pointer<ffi.Void>, ffi.Size)>()
external sds sdsnewlen(ffi.Pointer<ffi.Void> init, int initlen);

@ffi.Native<sds Function(ffi.Pointer<ffi.Char>)>()
external sds sdsnew(ffi.Pointer<ffi.Char> init);

@ffi.Native<sds Function()>()
external sds sdsempty();

@ffi.Native<sds Function(sds)>()
external sds sdsdup(sds s);

@ffi.Native<ffi.Void Function(sds)>()
external void sdsfree(sds s);

@ffi.Native<sds Function(sds, ffi.Size)>()
external sds sdsgrowzero(sds s, int len);

@ffi.Native<sds Function(sds, ffi.Pointer<ffi.Void>, ffi.Size)>()
external sds sdscatlen(sds s, ffi.Pointer<ffi.Void> t, int len);

@ffi.Native<sds Function(sds, ffi.Pointer<ffi.Char>)>()
external sds sdscat(sds s, ffi.Pointer<ffi.Char> t);

@ffi.Native<sds Function(sds, sds)>()
external sds sdscatsds(sds s, sds t);

@ffi.Native<sds Function(sds, ffi.Pointer<ffi.Char>, ffi.Size)>()
external sds sdscpylen(sds s, ffi.Pointer<ffi.Char> t, int len);

@ffi.Native<sds Function(sds, ffi.Pointer<ffi.Char>)>()
external sds sdscpy(sds s, ffi.Pointer<ffi.Char> t);

@ffi.Native<
  sds Function(sds, ffi.Pointer<ffi.Char>, ffi.Pointer<__va_list_tag>)
>()
external sds sdscatvprintf(
  sds s,
  ffi.Pointer<ffi.Char> fmt,
  ffi.Pointer<__va_list_tag> ap,
);

@ffi.Native<sds Function(sds, ffi.Pointer<ffi.Char>)>()
external sds sdscatprintf(sds s, ffi.Pointer<ffi.Char> fmt);

@ffi.Native<sds Function(sds, ffi.Pointer<ffi.Char>)>()
external sds sdscatfmt(sds s, ffi.Pointer<ffi.Char> fmt);

@ffi.Native<sds Function(sds, ffi.Pointer<ffi.Char>)>()
external sds sdstrim(sds s, ffi.Pointer<ffi.Char> cset);

@ffi.Native<ffi.Int Function(sds, ssize_t, ssize_t)>()
external int sdsrange(sds s, int start, int end);

@ffi.Native<ffi.Void Function(sds)>()
external void sdsupdatelen(sds s);

@ffi.Native<ffi.Void Function(sds)>()
external void sdsclear(sds s);

@ffi.Native<ffi.Int Function(sds, sds)>()
external int sdscmp(sds s1, sds s2);

@ffi.Native<
  ffi.Pointer<sds> Function(
    ffi.Pointer<ffi.Char>,
    ffi.Int,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
    ffi.Pointer<ffi.Int>,
  )
>()
external ffi.Pointer<sds> sdssplitlen(
  ffi.Pointer<ffi.Char> s,
  int len,
  ffi.Pointer<ffi.Char> sep,
  int seplen,
  ffi.Pointer<ffi.Int> count,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<sds>, ffi.Int)>()
external void sdsfreesplitres(ffi.Pointer<sds> tokens, int count);

@ffi.Native<ffi.Void Function(sds)>()
external void sdstolower(sds s);

@ffi.Native<ffi.Void Function(sds)>()
external void sdstoupper(sds s);

@ffi.Native<sds Function(ffi.LongLong)>()
external sds sdsfromlonglong(int value);

@ffi.Native<sds Function(sds, ffi.Pointer<ffi.Char>, ffi.Size)>()
external sds sdscatrepr(sds s, ffi.Pointer<ffi.Char> p, int len);

@ffi.Native<
  ffi.Pointer<sds> Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Int>)
>()
external ffi.Pointer<sds> sdssplitargs(
  ffi.Pointer<ffi.Char> line,
  ffi.Pointer<ffi.Int> argc,
);

@ffi.Native<
  sds Function(sds, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Size)
>()
external sds sdsmapchars(
  sds s,
  ffi.Pointer<ffi.Char> from,
  ffi.Pointer<ffi.Char> to,
  int setlen,
);

@ffi.Native<
  sds Function(
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Int,
    ffi.Pointer<ffi.Char>,
  )
>()
external sds sdsjoin(
  ffi.Pointer<ffi.Pointer<ffi.Char>> argv,
  int argc,
  ffi.Pointer<ffi.Char> sep,
);

@ffi.Native<
  sds Function(ffi.Pointer<sds>, ffi.Int, ffi.Pointer<ffi.Char>, ffi.Size)
>()
external sds sdsjoinsds(
  ffi.Pointer<sds> argv,
  int argc,
  ffi.Pointer<ffi.Char> sep,
  int seplen,
);

@ffi.Native<sds Function(sds, ffi.Size)>()
external sds sdsMakeRoomFor(sds s, int addlen);

@ffi.Native<ffi.Void Function(sds, ffi.Int)>()
external void sdsIncrLen(sds s, int incr);

@ffi.Native<sds Function(sds)>()
external sds sdsRemoveFreeSpace(sds s);

@ffi.Native<ffi.Size Function(sds)>()
external int sdsAllocSize(sds s);

@ffi.Native<ffi.Pointer<ffi.Void> Function(sds)>()
external ffi.Pointer<ffi.Void> sdsAllocPtr(sds s);

@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Size)>()
external ffi.Pointer<ffi.Void> sds_malloc(int size);

@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, ffi.Size)>()
external ffi.Pointer<ffi.Void> sds_realloc(ffi.Pointer<ffi.Void> ptr, int size);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void sds_free(ffi.Pointer<ffi.Void> ptr);

@ffi.Native<hiredisAllocFuncs>()
external hiredisAllocFuncs hiredisAllocFns;

@ffi.Native<ffi.Pointer<redisReader> Function()>()
external ffi.Pointer<redisReader> redisReaderCreate();

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void freeReplyObject(ffi.Pointer<ffi.Void> reply);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<__va_list_tag>,
  )
>()
external int redisvFormatCommand(
  ffi.Pointer<ffi.Pointer<ffi.Char>> target,
  ffi.Pointer<ffi.Char> format,
  ffi.Pointer<__va_list_tag> ap,
);

@ffi.Native<
  ffi.Int Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Char>)
>()
external int redisFormatCommand(
  ffi.Pointer<ffi.Pointer<ffi.Char>> target,
  ffi.Pointer<ffi.Char> format,
);

@ffi.Native<
  ffi.LongLong Function(
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Int,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Pointer<ffi.Size>,
  )
>()
external int redisFormatCommandArgv(
  ffi.Pointer<ffi.Pointer<ffi.Char>> target,
  int argc,
  ffi.Pointer<ffi.Pointer<ffi.Char>> argv,
  ffi.Pointer<ffi.Size> argvlen,
);

@ffi.Native<
  ffi.LongLong Function(
    ffi.Pointer<sds>,
    ffi.Int,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Pointer<ffi.Size>,
  )
>()
external int redisFormatSdsCommandArgv(
  ffi.Pointer<sds> target,
  int argc,
  ffi.Pointer<ffi.Pointer<ffi.Char>> argv,
  ffi.Pointer<ffi.Size> argvlen,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void redisFreeCommand(ffi.Pointer<ffi.Char> cmd);

@ffi.Native<ffi.Void Function(sds)>()
external void redisFreeSdsCommand(sds cmd);

@ffi.Native<ffi.Pointer<redisContext> Function(ffi.Pointer<redisOptions>)>()
external ffi.Pointer<redisContext> redisConnectWithOptions(
  ffi.Pointer<redisOptions> options,
);

@ffi.Native<
  ffi.Pointer<redisContext> Function(ffi.Pointer<ffi.Char>, ffi.Int)
>()
external ffi.Pointer<redisContext> redisConnect(
  ffi.Pointer<ffi.Char> ip,
  int port,
);

@ffi.Native<
  ffi.Pointer<redisContext> Function(ffi.Pointer<ffi.Char>, ffi.Int, timeval)
>()
external ffi.Pointer<redisContext> redisConnectWithTimeout(
  ffi.Pointer<ffi.Char> ip,
  int port,
  timeval tv,
);

@ffi.Native<
  ffi.Pointer<redisContext> Function(ffi.Pointer<ffi.Char>, ffi.Int)
>()
external ffi.Pointer<redisContext> redisConnectNonBlock(
  ffi.Pointer<ffi.Char> ip,
  int port,
);

@ffi.Native<
  ffi.Pointer<redisContext> Function(
    ffi.Pointer<ffi.Char>,
    ffi.Int,
    ffi.Pointer<ffi.Char>,
  )
>()
external ffi.Pointer<redisContext> redisConnectBindNonBlock(
  ffi.Pointer<ffi.Char> ip,
  int port,
  ffi.Pointer<ffi.Char> source_addr,
);

@ffi.Native<
  ffi.Pointer<redisContext> Function(
    ffi.Pointer<ffi.Char>,
    ffi.Int,
    ffi.Pointer<ffi.Char>,
  )
>()
external ffi.Pointer<redisContext> redisConnectBindNonBlockWithReuse(
  ffi.Pointer<ffi.Char> ip,
  int port,
  ffi.Pointer<ffi.Char> source_addr,
);

@ffi.Native<ffi.Pointer<redisContext> Function(ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<redisContext> redisConnectUnix(ffi.Pointer<ffi.Char> path);

@ffi.Native<
  ffi.Pointer<redisContext> Function(ffi.Pointer<ffi.Char>, timeval)
>()
external ffi.Pointer<redisContext> redisConnectUnixWithTimeout(
  ffi.Pointer<ffi.Char> path,
  timeval tv,
);

@ffi.Native<ffi.Pointer<redisContext> Function(ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<redisContext> redisConnectUnixNonBlock(
  ffi.Pointer<ffi.Char> path,
);

@ffi.Native<ffi.Pointer<redisContext> Function(redisFD)>()
external ffi.Pointer<redisContext> redisConnectFd(int fd);

/// Reconnect the given context using the saved information.
///
/// This re-uses the exact same connect options as in the initial connection.
/// host, ip (or path), timeout and bind address are reused,
/// flags are used unmodified from the existing context.
///
/// Returns REDIS_OK on successful connect or REDIS_ERR otherwise.
@ffi.Native<ffi.Int Function(ffi.Pointer<redisContext>)>()
external int redisReconnect(ffi.Pointer<redisContext> c);

@ffi.Native<
  ffi.Pointer<redisPushFn> Function(
    ffi.Pointer<redisContext>,
    ffi.Pointer<redisPushFn>,
  )
>()
external ffi.Pointer<redisPushFn> redisSetPushCallback(
  ffi.Pointer<redisContext> c,
  ffi.Pointer<redisPushFn> fn,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<redisContext>, timeval)>()
external int redisSetTimeout(ffi.Pointer<redisContext> c, timeval tv);

@ffi.Native<ffi.Int Function(ffi.Pointer<redisContext>)>()
external int redisEnableKeepAlive(ffi.Pointer<redisContext> c);

@ffi.Native<ffi.Int Function(ffi.Pointer<redisContext>, ffi.Int)>()
external int redisEnableKeepAliveWithInterval(
  ffi.Pointer<redisContext> c,
  int interval,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<redisContext>, ffi.UnsignedInt)>()
external int redisSetTcpUserTimeout(ffi.Pointer<redisContext> c, int timeout);

@ffi.Native<ffi.Void Function(ffi.Pointer<redisContext>)>()
external void redisFree(ffi.Pointer<redisContext> c);

@ffi.Native<redisFD Function(ffi.Pointer<redisContext>)>()
external int redisFreeKeepFd(ffi.Pointer<redisContext> c);

@ffi.Native<ffi.Int Function(ffi.Pointer<redisContext>)>()
external int redisBufferRead(ffi.Pointer<redisContext> c);

@ffi.Native<ffi.Int Function(ffi.Pointer<redisContext>, ffi.Pointer<ffi.Int>)>()
external int redisBufferWrite(
  ffi.Pointer<redisContext> c,
  ffi.Pointer<ffi.Int> done,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<redisContext>,
    ffi.Pointer<ffi.Pointer<ffi.Void>>,
  )
>()
external int redisGetReply(
  ffi.Pointer<redisContext> c,
  ffi.Pointer<ffi.Pointer<ffi.Void>> reply,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<redisContext>,
    ffi.Pointer<ffi.Pointer<ffi.Void>>,
  )
>()
external int redisGetReplyFromReader(
  ffi.Pointer<redisContext> c,
  ffi.Pointer<ffi.Pointer<ffi.Void>> reply,
);

@ffi.Native<
  ffi.Int Function(ffi.Pointer<redisContext>, ffi.Pointer<ffi.Char>, ffi.Size)
>()
external int redisAppendFormattedCommand(
  ffi.Pointer<redisContext> c,
  ffi.Pointer<ffi.Char> cmd,
  int len,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<redisContext>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<__va_list_tag>,
  )
>()
external int redisvAppendCommand(
  ffi.Pointer<redisContext> c,
  ffi.Pointer<ffi.Char> format,
  ffi.Pointer<__va_list_tag> ap,
);

@ffi.Native<
  ffi.Int Function(ffi.Pointer<redisContext>, ffi.Pointer<ffi.Char>)
>()
external int redisAppendCommand(
  ffi.Pointer<redisContext> c,
  ffi.Pointer<ffi.Char> format,
);
